--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,7 @@
       "js": [
         "content_script.js"
       ],
-      "run_at": "document_idle"
+      "run_at": "document_end"
     }
   ]
 }
